# base

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  strings.hpp  types.cpp  types.hpp  types_impl.hpp
unicode/utf16/: BUILD.bazel  utf16.cpp  utf16.hpp  utf16_impl.hpp  utf16_test.cpp
unicode/utf8/: BUILD.bazel  strings.cpp  strings.hpp  strings_impl.hpp  utf8.cpp  utf8.hpp  utf8_benchmark.cpp  utf8_impl.hpp  utf8_test.cpp
