load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "base",
    hdrs = [
        "types.hpp",
    ],
    srcs = [
        "types_impl.hpp",
        "types.cpp",
    ],
    deps = [
        "@com_google_absl//absl/types:span"
    ]
)
