load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "base",
    hdrs = [
        "types.hpp",
    ],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/types:span",
    ],
)

cc_library(
    name = "strings",
    hdrs = [
        "strings.hpp",
    ],
    deps = [
        "@com_pblaberge_base//unicode/utf8",
    ],
)
