load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "utf8",
    srcs = [
        "utf8.cpp",
    ],
    hdrs = [
        "utf8.hpp",
        "utf8_impl.hpp",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@com_pblaberge_base//:base",
    ],
)

cc_test(
    name = "utf8_test",
    srcs = [
        "utf8_test.cpp",
    ],
    deps = [
        ":utf8",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "utf8_benchmark",
    srcs = [
        "utf8_benchmark.cpp",
    ],
    tags = ["benchmark"],
    deps = [
        ":utf8",
        "@com_github_google_benchmark//:benchmark_main",
    ],
)
